Agrega nombres en acerdaDe

--- a/templates/aCerca.html
+++ b/templates/aCerca.html
@@ -75,6 +75,8 @@
 		<p class="p">Realizado por</p>
         <p class="p">Rafael Santiago Salgado</p>
         <p class="p">Pablo Rein Siegers Treviño</p>
+        <p class="p">Carolina Elizabeth García Rocha</p>
+        <p class="p">Gregorio Eduardo Reyes Montiel</p>
 	</div>
 	</div>
     </div>
